<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.psyyf2.dissertation.activity.HomeworkEdit">


    <LinearLayout
        android:id="@+id/log1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/hometitle4"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_edittext"
            android:inputType=""
            android:text="@string/textview"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/homedescription4"
            android:layout_width="250dp"
            android:layout_height="168dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_edittext"
            android:inputType=""
            android:text="@string/textview"
            android:textAlignment="center"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="84dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonAssign"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/edit_color"
                android:text="Update" />

            <Button
                android:id="@+id/buttonCancel"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/edit_color"
                android:text="Cancel" />
        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
