<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.psyyf2.dissertation.activity.HomeworkEdit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_normal3"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="Grade Analysis"
            app:titleTextColor="#f5f5f5" />

        <LinearLayout
            android:id="@+id/log"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:text="Open Homework"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:textAlignment="viewStart" />
            </LinearLayout>

            <TextView
                android:id="@+id/hometitle2"
                android:layout_width="350dp"
                android:layout_height="45dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_bg"
                android:text="@string/textview"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/homedescription2"
                android:layout_width="350dp"
                android:layout_height="170dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/edit_bg"
                android:text="@string/textview"
                android:textAlignment="center"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="84dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_bg1"
                    android:onClick="checkStatu"
                    app:srcCompat="@drawable/ic_done_all" />

                <ImageButton
                    android:id="@+id/imageButtonEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"

                    android:background="@drawable/edit_bg1"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/ic_border_color" />

                <ImageButton
                    android:id="@+id/imageButtonDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_bg1"
                    android:contentDescription="@string/todo"
                    android:onClick="deleteHome"
                    app:srcCompat="@drawable/ic_delete_forever" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
