<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.psyyf2.dissertation.activity.MainActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/checkBox"
        android:layout_marginStart="10dp"
        android:layout_marginTop="38dp"
        app:srcCompat="@drawable/teacher_icon" />

    <EditText
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_above="@+id/editText4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:background="@drawable/bg_edittext"
        android:ems="19"
        android:hint="Email"
        android:textSize="15sp" />


    <EditText
        android:id="@+id/editText4"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_above="@+id/checkBox"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginBottom="26dp"
        android:background="@drawable/bg_edittext"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/checkBox"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Log"
        android:layout_alignStart="@+id/editText4"
        android:layout_marginBottom="49dp"
        android:layout_marginStart="8dp"
        android:text="@string/show_password" />

    <Button
        android:id="@+id/Log"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/checkBox"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="74dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/edit_color1"
        android:onClick="loginClicked"
        android:text="@string/log" />

</RelativeLayout>