<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="10dp"
    >

    <ListView
        android:id="@+id/listchat"
        android:layout_width="match_parent"
        android:layout_height="524dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input"
            android:layout_width="322dp"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
             />

        <ImageButton
            android:id="@+id/imageButtonChat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:onClick="send"
            app:srcCompat="@drawable/ic_menu_send" />
    </LinearLayout>


</LinearLayout>