<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp">


    <com.venmo.view.TooltipView
        android:id="@+id/message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:tooltipColor="#66009900" />

    <TextView
        android:id="@+id/message_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/message_time"
        android:layout_width="match_parent"
        android:textColor="@android:color/darker_gray"
        android:layout_height="wrap_content" />


</LinearLayout>