<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StudentList"
    android:baselineAligned="false" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarStudent"
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:layout_weight="1"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_bg"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/list_student"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingRight="5dp"></ListView>

        <LinearLayout
            android:id="@+id/side_index"
            android:layout_width="25dp"
            android:layout_marginTop="40dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center_horizontal"
            android:orientation="vertical"></LinearLayout>
    </LinearLayout>

</LinearLayout>