...
    <string name="checkbox">CheckBox</string>
    <string name="show_password">Show password</string>
    <string name="title_activity_homework">Homework</string>
    <string name="assign">Assign</string>
    <string name="homework">Homework</string>
    <string name="grade">Grade</string>
    <string name="student_info">Student Info</string>
    <string name="student_name">Student Name</string>
    <string name="title_activity_view_grade">ViewGrade</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="please_enter_the_name">Please Enter the Name</string>
...
